--- a/index.html
+++ b/index.html
@@ -7064,7 +7064,7 @@ if ('serviceWorker' in navigator) {
   window.addEventListener('load', async () => {
     try {
       // Enregistrer le service worker
-      const registration = await navigator.serviceWorker.register('sw.js');
+      const registration = await navigator.serviceWorker.register('./sw.js');
       console.log('✅ Service Worker enregistré avec succès:', registration);
 
       // Vérifier l'installation de l'application
