--- a/index.html
+++ b/index.html
@@ -1814,7 +1814,7 @@ async function setupFirebaseMessaging() {
   if (!navigator.serviceWorker.controller) {
     try {
       // Enregistrer le SW unifié
-      const registration = await navigator.serviceWorker.register('./sw.js', {
+      const registration = await navigator.serviceWorker.register('sw.js', {
         scope: '/',
         updateViaCache: 'none' // Toujours vérifier les mises à jour
       });
@@ -7064,7 +7064,7 @@ if ('serviceWorker' in navigator) {
   window.addEventListener('load', async () => {
     try {
       // Enregistrer le service worker
-      const registration = await navigator.serviceWorker.register('./sw.js');
+      const registration = await navigator.serviceWorker.register('sw.js');
       console.log('✅ Service Worker enregistré avec succès:', registration);
 
       // Vérifier l'installation de l'application
@@ -7541,7 +7541,7 @@ setInterval(() => {
     // Enregistrer le Service Worker immédiatement
     window.addEventListener('load', async () => {
       try {
-        const registration = await navigator.serviceWorker.register('./sw.js');
+        const registration = await navigator.serviceWorker.register('sw.js');
         console.log('✅ Service Worker enregistré avec succès');
         
         // Vérifier les mises à jour toutes les 15 minutes
