Add version and CSP meta tags to index.html
Added version and Content Security Policy meta tags.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <meta name="theme-color" content="#3498db">
 
    <!-- Service Worker et mise à jour -->
+    <meta name="version" content="2.1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
    
   <!-- Apple Touch Icons -->
   <link rel="apple-touch-icon" href="icon-192x192.png">
