--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <meta name="theme-color" content="#3498db">
 
    <!-- Service Worker et mise à jour -->
-     <meta name="version" content="2.1.0">
+   <meta name="version" content="2.1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
+
 
   <!-- Apple Touch Icons -->
   <link rel="apple-touch-icon" href="icon-192x192.png">
@@ -70,6 +72,30 @@
         .page { display: none; }
         .page.active { display: block; }
 
+
+/* SOLUTION D'URGENCE */
+* {
+    max-width: 100vw !important;
+    box-sizing: border-box !important;
+}
+
+body {
+    overflow-x: hidden !important;
+    position: relative !important;
+}
+
+@media (max-width: 768px) {
+    .app-container, .main-content, .content-area {
+        width: 100% !important;
+        flex-direction: column !important;
+    }
+    
+    table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+}
 /* Styles pour les badges de notification */
 .notification-dot {
     position: absolute;
